Update and rename navigation.yml to navigation.html
if you want to include the file, change the navigation back to .yml

--- a/_data/navigation.html
+++ b/_data/navigation.html
@@ -1,3 +1,5 @@
+<!--Change the .html extension to the .yml extension
+
 header:
   - titles:
       en      : &EN       Course Reviews
@@ -259,4 +261,4 @@ other-en:
   - title:      Propulsion
     children:
       - title:  Prof. Krishnendhu Sinha
-        url:        /project_reviews/other/propulsion/ksinha.html
+        url:        /project_reviews/other/propulsion/ksinha.html-->
